Improve analysis levels.