@@ -191,8 +191,8 @@ public class TestAnalysis {
         JvmContext context = new JvmContext(opts);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
-                Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
+                Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
                 Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT + " analysis incorrectly identified.");
         assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_CMS_DISABLED.getKey()),
@@ -241,8 +241,8 @@ public class TestAnalysis {
         JvmContext context = new JvmContext(opts);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
-                Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
+                Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_CMS_DISABLED.getKey()),
                 Analysis.INFO_CMS_DISABLED + " analysis incorrectly identified.");
         assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
@@ -258,8 +258,8 @@ public class TestAnalysis {
         JvmContext context = new JvmContext(opts);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
-                Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
+                Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_CMS_DISABLED.getKey()),
                 Analysis.INFO_CMS_DISABLED + " analysis incorrectly identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
@@ -1265,8 +1265,8 @@ public class TestAnalysis {
         jvmOptions.doAnalysis();
         assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_JDK11_PARALLEL_OLD_CRUFT.getKey()),
                 Analysis.INFO_JDK11_PARALLEL_OLD_CRUFT + " analysis not identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
     }
 
     /**
@@ -1280,8 +1280,8 @@ public class TestAnalysis {
         jvmOptions.doAnalysis();
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK11_PARALLEL_OLD_CRUFT.getKey()),
                 Analysis.INFO_JDK11_PARALLEL_OLD_CRUFT + " analysis incorrectly identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
     }
 
     @Test
@@ -1315,8 +1315,8 @@ public class TestAnalysis {
         context.getGarbageCollectors().add(GarbageCollector.PARALLEL_SERIAL_OLD);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
-        assertTrue(jvmOptions.hasAnalysis(Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis not identified.");
+        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis not identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK11_PARALLEL_OLD_CRUFT.getKey()),
                 Analysis.INFO_JDK11_PARALLEL_OLD_CRUFT + " analysis incorrectly identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_GC_IGNORED.getKey()),
@@ -1331,12 +1331,14 @@ public class TestAnalysis {
         jvmOptions.doAnalysis();
         assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_CMS_MISSING.getKey()),
                 Analysis.ERROR_CMS_MISSING + " analysis incorrectly identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
-        assertTrue(jvmOptions.hasAnalysis(Analysis.WARN_PAR_NEW_SERIAL_OLD.getKey()),
-                Analysis.WARN_PAR_NEW_SERIAL_OLD + " analysis not identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
+        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_PAR_NEW_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PAR_NEW_SERIAL_OLD + " analysis not identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
                 Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_GC_IGNORED.getKey()),
+                Analysis.ERROR_GC_IGNORED + " analysis incorrectly identified.");
     }
 
     @Test
@@ -1586,6 +1588,20 @@ public class TestAnalysis {
                 + "use: -XX:+UnlockDiagnosticVMOptions -XX:+PrintSafepointStatistics -XX:+LogVMOutput.";
         assertEquals(diagnostic, jvmOptions.getAnalysisLiteral(Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED.getKey()),
                 Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED + " not correct.");
+    }
+
+    @Test
+    void testSerialNewCms() {
+        String opts = "-Xss128k -Xmx2048M -XX:+UseConcMarkSweepGC -XX:-UseParNewGC";
+        JvmContext context = new JvmContext(opts);
+        context.getGarbageCollectors().add(GarbageCollector.SERIAL_NEW);
+        context.getGarbageCollectors().add(GarbageCollector.CMS);
+        JvmOptions jvmOptions = new JvmOptions(context);
+        jvmOptions.doAnalysis();
+        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
+                Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED + " analysis not identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_GC_IGNORED.getKey()),
+                Analysis.ERROR_GC_IGNORED + " analysis incorrectly identified.");
     }
 
     @Test
@@ -1947,8 +1963,8 @@ public class TestAnalysis {
         JvmContext context = new JvmContext(opts);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
-        assertTrue(jvmOptions.hasAnalysis(Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.WARN_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis not identified.");
+        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis not identified.");
     }
 
     @Test
@@ -1971,8 +1987,8 @@ public class TestAnalysis {
         JvmContext context = new JvmContext(opts);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
-        assertTrue(jvmOptions.hasAnalysis(Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
-                Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED + " analysis not identified.");
+        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
+                Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED + " analysis not identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
                 Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT + " analysis incorrectly identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_CMS_DISABLED.getKey()),
@@ -1989,8 +2005,8 @@ public class TestAnalysis {
                 Analysis.INFO_JDK8_CMS_PAR_NEW_REDUNDANT + " analysis not identified.");
         assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_CMS_DISABLED.getKey()),
                 Analysis.INFO_CMS_DISABLED + " analysis incorrectly identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
-                Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED.getKey()),
+                Analysis.ERROR_JDK8_CMS_PAR_NEW_DISABLED + " analysis incorrectly identified.");
     }
 
     @Test
